# ABDM-HIU-SDK

./: .gitignore  Dockerfile  LICENSE  README.md  hiu_api.py  hiu_api.yaml  openapi.json  pyproject.toml  setup.py  tox.ini
ABDM-HIU-SDK/: __init__.py
abdm/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
abdm-hiu-sdk/: README.md  __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: AccessTokenValidity.md  AccessTokenValidityModel.md  AuthConfirmIdentifier.md  AuthConfirmIdentifierModel.md  AuthConfirmIdentifierTypeModel.md  AuthMeta.md  AuthMetaModel.md  AuthenticationModeModel.md  CareContextDefinition.md  CareContextDefinitionModel.md  CertificateOrKeyGetSchema.md  CertificateOrKeyGetSchemaModel.md  Certs.md  CertsModel.md  Consent.md  ConsentAcknowledgement.md  ConsentAcknowledgementModel.md  ConsentArtefactReference.md  ConsentArtefactReferenceModel.md  ConsentArtefactResponse.md  ConsentArtefactResponseConsent.md  ConsentArtefactResponseConsentConsentDetail.md  ConsentArtefactResponseConsentConsentDetailCareContextsInner.md  ConsentArtefactResponseConsentConsentDetailCareContextsInnerModel.md  ConsentArtefactResponseConsentConsentDetailConsentManager.md  ConsentArtefactResponseConsentConsentDetailConsentManagerModel.md  ConsentArtefactResponseConsentConsentDetailHip.md  ConsentArtefactResponseConsentConsentDetailHipModel.md  ConsentArtefactResponseConsentConsentDetailHiu.md  ConsentArtefactResponseConsentConsentDetailHiuModel.md  ConsentArtefactResponseConsentConsentDetailModel.md  ConsentArtefactResponseModel.md  (+214 more)
(+549 files in other folders)
