[tool.poetry]
name = "abdm-hiu-py"
version = "0.1.0"
description = ""
authors = ["Aditya-Kumar-Code <87271653+Aditya-Kumar-Code@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
ruff = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
